# githubnator

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  leptosfmt.toml
.github/workflows/: trunk-build-deploy.yml
src/: main.rs  models.rs
src/components/: help_icon.rs  history.rs  input_query_by.rs  issue_or_pull.rs  mod.rs  repositories.rs
static/: styles.scss
