[package]
name = "githubnator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-storage = "0.3.0"
gloo-timers = { version = "0.3.0", features = ["futures" ]}
leptos = { version = "0.6.5", features = ["csr", "nightly"] }
#leptos-use = "0.10.10"
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4.27"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
